fix: Add scrollbars to inventories

--- a/systemless.css
+++ b/systemless.css
@@ -275,6 +275,7 @@
     max-width: 120px;
     height: 120px;
     border: none;
+    padding-right: 4px;
     border-right: 2px groove #eeede0;
 }
 .systemless.sheet.actor .charname {
@@ -355,6 +356,10 @@
   text-align: right;
   padding-right: 20px;
 }
+.systemless.sheet.actor .itemlist-partial .itemlist-lists {
+  max-height: 500px;
+  overflow-y: auto;
+}
 .systemless.sheet.actor .itemlist-partial .itemlist-lists .header {
   border-bottom: 2px groove #eeede0;
   font-size: 16px;
@@ -377,12 +382,10 @@
   flex: 1 0 150px;
   min-width: 150px;
 }
-
 .systemless.sheet.actor .itemlist-partial .itemlist-lists .counter {
   min-width: 110px;
   max-width: 125px;
 }
-  
 .systemless.sheet.actor .itemlist-partial .itemlist-lists .item-control {
   max-width: 40px;
 }
